# mcounter-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md
_tests/: basic_moo_test.c  basic_test.c
inc/: mcounter.h  moocounter.h
include/: mcounter.h  moocounter.h
lib/unity/src/: unity.c
src/: demo.c  main.c  mcounter.c  moocounter.c
tests/: test_mcounter.c  test_moocounter.c
